--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: RobbieMiller928's homepage
-description: Bookmark this to keep an eye on my project updates!
+description: Welcome to my page!
